# solana-corss-chain-signed-Instruction

./: Cargo.toml  README.md
examples/proxy_auth/: Cargo.toml
examples/proxy_auth/src/: entrypoint.rs  lib.rs  test.rs
examples/proxy_auth/src/instructions/: invoke_authenticated_cpi.rs  mod.rs  register_auth_user.rs
examples/proxy_auth/src/state/: auth_user.rs
src/: byte_signed_ix.rs  error.rs  lib.rs  signed_message.rs  utils.rs
