[package]
name = "ssi"
version = "0.1.0"
edition = "2021"
description = "SSI is a specification for cross-chain gasless solana transactions and user authorization"
exclude = ["examples/*"]
[features]
default = []

[dependencies.solana-program]
version = "2.1.4"
[dependencies.borsh]
version = "0.10"
[dependencies.sha3]
version = "0.10"
[dependencies.libsecp256k1]
version = "0.7.1"
[dependencies.thiserror]
version = "1"

[dev-dependencies.hex]
version = "0.4"

[profile.release]
opt-level = 3
incremental = false
codegen-units = 1
lto = "fat"
