[package]
name = "proxy_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
no-entrypoint = []

[dependencies.ssi]
path = "../.."

[dependencies.solana-program]
version = "2.1.4"
[dependencies.libsecp256k1]
version = "0.7.1"
[dependencies.arrayref]
version = "0.3.9"

[dev-dependencies.solana-program-test]
version = "2.1.4"
[dev-dependencies.solana-sdk]
version = "2.1.4"
[dev-dependencies.rand]
version = "0.8"
[dev-dependencies.tokio]
version = "1"
features = ["full", "parking_lot"]

[profile.release]
opt-level = 3
incremental = false
codegen-units = 1
lto = "fat"
